Modifications made for multiple embedded interaction per EmbeddedMessaging interaction, also some test mods and cleanup